<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Email:holuwaseun50@gmail.com</string>
    <string name="hello_second_fragment">Name: IYIOLA OLUWASEUN DANIEL</string>
    <string name="hello_fifth_fragment"> BASIC INFORMATION</string>
    <string name="hello_fourth_fragment">"Track:MOBILE \n Courses: JAVA,KOTLIN,FLUTTER "</string>
    <string name="hello_third_fragment">Slack Username:Codebeast</string>
</resources>
